Revision history for Perl extension Carp::Always.

    $Id: Changes 1480 2007-07-30 14:35:04Z me $

0.10  xxx
        - fix typo in POD RT#68793 (also reported by Kai Moonbourn)

0.09  Mon Jul 30 2007
        - no need for updating
        - lib/Carp/Indeed.pm was moved to the deprecate
          Carp-Indeed distribution

0.08  Tue Mar 20 2007
        - no need for updating
        - micro changes (POD, Makefile.PL, README)

0.07  Tue Oct 25 2006
        - no real change, no need to upgrade
        - added taint checking to tests, with shebang "#!perl -T\n"
        - Always.pm and Indeed.pm moved to lib/Carp/
        - "use strict" in Indeed.pm
        - $Carp::Indeed::VERSION = $Carp::Always::VERSION

0.06  Mon Jul 17 2006
        - Carp::Indeed was superseded by Carp::Always
        - now there is an END block
        - there is a test for POD coverage

0.05  Tue May 30 2006
        - remove @EXPORT_OK and all use of Exporter (which was good
          for nothing) - a suggestion by Yuval Kogman via CPAN ratings
        - simplified tests with Test::Base

0.04  Wed Oct 12 2005 (r198, tag)
        - fixed mistakes at META.yml and t/002basic.t
        - shortened documentation

0.03  Mon Oct 10 2005
        - now using $SIG{__DIE__} and $SIG{__WARN__} to catch 
          perl generated warnings and errors as well 
        - added a test for perl generated warnings
        - renamed "t/003pod.t" to "t/090pod.t"
        - shortened "lib/Carp/Indeed.pm" to "Indeed.pm" (as
          this is a module of an only PM file)

0.02  Thu Aug  5 2005
        - POD minor fixes 
        - I should have said "NO_META => 1" in Makefile.PL instead
          of "NO_META => 0"
        - "use Carp qw(verbose)" instead of "require Carp; $Carp::Verbose=1"
          was enough for carp() and croak() to be verbose too

0.01  Thu Aug  4 2005
        - first realease to CPAN

0.00  Thu Aug  4 13:07:27 2005
        - original version; created by h2xs 1.23 with options