@@ -12,16 +12,17 @@ use Carp qw(verbose); # makes carp() cluck and croak() confess
 sub _warn {
   if ($_[-1] =~ /\n$/s) {
     my $arg = pop @_;
-    $arg =~ s/ at .*? line .*?\n$//s;
+    $arg =~ s/(.*)( at .*? line .*?\n$)/$1/s;
     push @_, $arg;
   }
   warn &Carp::longmess;
 }
 
 sub _die {
+  die @_ if ref($_[0]);
   if ($_[-1] =~ /\n$/s) {
     my $arg = pop @_;
-    $arg =~ s/ at .*? line .*?\n$//s;
+    $arg =~ s/(.*)( at .*? line .*?\n$)/$1/s;
     push @_, $arg;
   }
   die &Carp::longmess;
